--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STARTUP3</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-6">
                     <div class="arrow">
-                        <img src="CSS/image/Placeholder.png" alt="placeholder" class="img">
+                        <img src="assets/image/Placeholder.png" alt="placeholder" class="img">
                         <span class="postn play"><svg width="16" height="18" viewBox="0 0 16 18" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
